Rename DB_Task_Column name --> title

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,7 +7,7 @@
   </tr>
 
   <tr>
-    <td><%= @task.name %></td>
+    <td><%= @task.title %></td>
     <td><%= @task.content %></td>
   </tr>
 </table>
