--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,7 +9,7 @@
 
   <% @tasks.each do |task| %>
     <tr>
-      <td><%= task.name %></td>
+      <td><%= task.title %></td>
       <td><%= task.content %></td>
       <td><%= link_to '詳細', task %></td>
       <td><%= link_to '編集', edit_task_path(task) %></td>
