--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <td><%= task.title %></td>
       <td><%= task.content %></td>
-      <td><%= link_to '詳細', task %></td>
+      <td><%= link_to '詳細', task , id: 'show' %></td>
       <td><%= link_to '編集', edit_task_path(task) %></td>
       <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
