--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: task, local: true) do |form| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(task.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(task.errors.count, "個のエラーが発生しました") %>:</h2>
 
       <ul>
         <% task.errors.full_messages.each do |message| %>
