--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,18 @@
 <p class="notice"><%= notice %></p>
 <h2>タスク一覧</h2>
 
+<%= form_with(method: 'get' ,url: "/tasks", local: true , scope: 'task') do |form| %>
+  <%= form.text_field :title ,id: 'title'%>
+  <%= form.select :status, Task.statuses.keys, include_blank: "" %>
+  <%= form.submit '検索' ,id: 'search'%>
+<% end %>
+
 <table>
   <tr>
     <th>タスク名</th>
     <th>内容</th>
     <th>終了期日</th>
-    <th>登録日時</th>
+    <th>ステータス</th>
   </tr>
 
   <% @tasks.each do |task| %>
@@ -14,7 +20,7 @@
       <td class="title"><%= task.title %></td>
       <td><%= task.content %></td>
       <td><%= task.deadline %></td>
-      <td><%= task.created_at %></td>
+      <td class='status'><%= task.status %></td>
       <td><%= link_to '詳細', task , id: 'show' %></td>
       <td><%= link_to '編集', edit_task_path(task) %></td>
       <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
