--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,6 +13,7 @@
     <th>内容</th>
     <th>終了期日</th>
     <th>ステータス</th>
+    <th>優先順位</th>
   </tr>
 
   <% @tasks.each do |task| %>
@@ -21,6 +22,7 @@
       <td><%= task.content %></td>
       <td><%= task.deadline %></td>
       <td class='status'><%= task.status %></td>
+      <td class='priority'><%= task.priority %></td>
       <td><%= link_to '詳細', task , id: 'show' %></td>
       <td><%= link_to '編集', edit_task_path(task) %></td>
       <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +32,5 @@
 
 <%= link_to :新規登録, new_task_path %><br>
 <%= link_to "通常タスク一覧", tasks_path %><br>
-<%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
+<%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %><br>
+<%= link_to "優先度でソートする", tasks_path(sort_priority: "true") %>
