--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -29,7 +29,8 @@
     </tr>
   <% end %>
 </table>
-
+<%= paginate @tasks %>
+<br>
 <%= link_to :新規登録, new_task_path %><br>
 <%= link_to "通常タスク一覧", tasks_path %><br>
 <%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %><br>
