--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,12 +2,18 @@
 <h2>タスク一覧</h2>
 
 <%= form_with(method: 'get' ,url: "/tasks", local: true , scope: 'task') do |form| %>
-  <%= form.text_field :title ,id: 'title'%>
-  <%= form.select :status, Task.statuses.keys, include_blank: "" %>
-  <%= form.submit '検索' ,id: 'search'%>
+  <div>
+    <%= form.label :title ,class:'form-label'%>
+    <%= form.text_field :title ,id: 'title',class:'form-control w-50'%>
+  </div>
+  <div>
+    <%= form.label :status ,class:'form-label'%>
+    <%= form.select :status, Task.statuses.keys, include_blank: "",class:'form-control' %>
+  </div>
+  <%= form.submit '検索' ,id: 'search',class:'btn btn-primary'%>
 <% end %>
 
-<table>
+<table class="table">
   <tr>
     <th>タスク名</th>
     <th>内容</th>
@@ -23,9 +29,9 @@
       <td><%= task.deadline %></td>
       <td class='status'><%= task.status %></td>
       <td class='priority'><%= task.priority %></td>
-      <td><%= link_to '詳細', task , id: 'show' %></td>
-      <td><%= link_to '編集', edit_task_path(task) %></td>
-      <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to '詳細', task , id: 'show' ,class:'btn btn-primary'%></td>
+      <td><%= link_to '編集', edit_task_path(task) ,class:'btn btn-secondary'%></td>
+      <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-warning' %></td>
     </tr>
   <% end %>
 </table>
