--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light justify-content-start" style="background-color: #e3f2fd;">
+      <% if logged_in? %>
+        <%= link_to "タスク一覧", tasks_path ,class: "nav-link"%>
+        <%= link_to "タスク作成", new_task_path ,class: "nav-link"%>
+        <%= link_to "マイページ", user_path(current_user.id) ,class: "nav-link"%>
+        <%= link_to "個人情報編集", edit_user_path(current_user.id) ,class: "nav-link"%>
+        <%= link_to "Logout", session_path(current_user.id), method: :delete ,class: "nav-link"%>
+      <% else %>
+        <%= link_to "Sign up", new_user_path ,class: "nav-link"%>
+        <%= link_to "Login", new_session_path ,class: "nav-link"%>
+      <% end %>
+    </nav>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
