--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -20,6 +20,7 @@
     <th>終了期日</th>
     <th>ステータス</th>
     <th>優先順位</th>
+    <th>作成者</th>
   </tr>
 
   <% @tasks.each do |task| %>
@@ -29,6 +30,7 @@
       <td><%= task.deadline %></td>
       <td class='status'><%= task.status %></td>
       <td class='priority'><%= task.priority %></td>
+      <td class='email'><%= task.user.email %></td>
       <td><%= link_to '詳細', task , id: 'show' ,class:'btn btn-primary'%></td>
       <td><%= link_to '編集', edit_task_path(task) ,class:'btn btn-secondary'%></td>
       <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-warning' %></td>
