--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: task, local: true) do |form| %>
+<%= form_with(model: @task, local: true) do |form| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(task.errors.count, "個のエラーが発生しました") %>:</h2>
@@ -31,6 +31,15 @@
     <%= form.label :priority ,class:'form-label'%>
     <%= form.select :priority, [["高","高"],["中","中"],["低","低"]], include_blank: "選択して下さい",class:'form-control'%>
   </div>
+  <div>
+    <% LabelMaster.all.each do |label| %>
+      <span class='checkbox'>
+        <%= form.check_box :label_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false }, label[:id] %>
+        <%= label.name %>
+      </span>
+    <% end %>
+  </div>
+
   <div class="field">
     <%= form.submit '登録する' ,class:'btn btn-primary'%>
   </div>
