--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,6 +10,10 @@
     <%= form.label :status ,class:'form-label'%>
     <%= form.select :status, Task.statuses.keys, include_blank: "",class:'form-control' %>
   </div>
+  <div>
+    <%= form.label :labels ,class:'form-label'%>
+    <%= form.select :label_id, LabelMaster.pluck(:name, :id), include_blank: true %>
+  </div>
   <%= form.submit '検索' ,id: 'search',class:'btn btn-primary'%>
 <% end %>
 
@@ -21,6 +25,7 @@
     <th>ステータス</th>
     <th>優先順位</th>
     <th>作成者</th>
+    <th>ラベル</th>
   </tr>
 
   <% @tasks.each do |task| %>
@@ -31,6 +36,11 @@
       <td class='status'><%= task.status %></td>
       <td class='priority'><%= task.priority %></td>
       <td class='email'><%= task.user.email %></td>
+      <td class="label">
+        <% task.labels.each do |label| %>
+          <%= label.name + " | " %>
+        <% end %>
+      </td>
       <td><%= link_to '詳細', task , id: 'show' ,class:'btn btn-primary'%></td>
       <td><%= link_to '編集', edit_task_path(task) ,class:'btn btn-secondary'%></td>
       <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-warning' %></td>
