--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       <% if logged_in? %>
         <%= link_to "タスク一覧", tasks_path ,class: "nav-link"%>
         <%= link_to "タスク作成", new_task_path ,class: "nav-link"%>
+        <%= link_to "ラベル一覧", label_masters_path ,class: "nav-link"%>
         <%= link_to "マイページ", user_path(current_user.id) ,class: "nav-link"%>
         <%= link_to "個人情報編集", edit_user_path(current_user.id) ,class: "nav-link"%>
         <%= link_to "Logout", session_path(current_user.id), method: :delete ,class: "nav-link"%>
