--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,20 @@
-<p class="notice"><%= notice %></p>
+<% if @timenear_task.present? %>
+  <h2 class="text-info"">期日間近のタスク</h2>
+  <ul>
+    <% @timenear_task.each do |task|%>
+      <li><%= task.title %></li>
+    <% end %>
+  </ul>
+<% end%>
+<% if @timefails_task.present? %>
+  <h2 class="text-danger">期日超過タスク</h2>
+  <ul>
+    <% @timefails_task.each do |task|%>
+      <li><%= task.title %></li>
+    <% end %>
+  </ul>
+<% end%>
+
 <h2>タスク一覧</h2>
 
 <%= form_with(method: 'get' ,url: "/tasks", local: true , scope: 'task') do |form| %>
