--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -39,6 +39,10 @@
       </span>
     <% end %>
   </div>
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
 
   <div class="field">
     <%= form.submit '登録する' ,class:'btn btn-primary'%>
