--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+<% if @user.icon.present?%>
+  <div><%= image_tag(@user.icon_url, :alt => @user.email)%></div>
+<% end %>
+
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
